Update AllSoundEvents.java